// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config getConfigForFile returns an extended config with 3 transitive extends 1`] = `
Object {
  "rules": Object {
    "a": 1,
    "b": 2,
    "c": 3,
    "override": 100,
  },
}
`;

exports[`config getConfigForFile returns an extended config with multiple extenions 1`] = `
Object {
  "rules": Object {
    "a": 1,
    "b": 2,
    "c": 3,
    "override": 100,
    "x": 4,
    "y": 5,
    "z": 6,
  },
}
`;

exports[`config getConfigForFile returns an extended config with multiple extenions and no override 1`] = `
Object {
  "rules": Object {
    "a": 1,
    "b": 2,
    "c": 3,
    "override": 3,
    "x": 4,
    "y": 5,
    "z": 6,
  },
}
`;

exports[`config getConfigForFile returns an extended config with no transitive extend 1`] = `
Object {
  "rules": Object {
    "a": 1,
    "b": 2,
    "c": 3,
    "x": 1,
    "y": 2,
    "z": 3,
  },
}
`;
